# almost-universal-speedhack

./: CMakeLists.txt  README.md  harness.cpp  injector.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  speedhack.cpp
dll/: CMakeLists.txt
gui/: CMakeLists.txt  injector.h  mainwindow.ui
harness/: CMakeLists.txt
shared/: speedhack_ipc.h
